force-app/main/default/objects/Werk_Order__c/Werk_Order__c.object-meta.xml
<CustomObject>
    <label>Werk Order</label>
    <nameField>
        <displayFormat>WB-{00000}</displayFormat>
        <label>Werk Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Werk Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>