force-app/main/default/objects/Werk_Order__c/fields/Aanvang_Datum_en_Tijd__c.field-meta.xml
<CustomField>
    <fullName>Aanvang_Datum_en_Tijd__c</fullName>
    <description>Voer uitvoerdatum in</description>
    <label>Aanvang Vanaf</label>
    <type>DateTime</type>
</CustomField>