force-app/main/default/objects/Werk_Order__c/fields/Aanvang_Tot__c.field-meta.xml
<CustomField>
    <fullName>Aanvang_Tot__c</fullName>
    <label>Aanvang Tot</label>
    <type>DateTime</type>
</CustomField>