force-app/main/default/objects/Werk_Order__c/fields/Accountname__c.field-meta.xml
<CustomField>
    <fullName>Accountname__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountname</label>
    <type>Text</type>
</CustomField>