force-app/main/default/objects/Werk_Order__c/fields/Afleveradres1__c.field-meta.xml
<CustomField>
    <fullName>Afleveradres1__c</fullName>
    <label>Afleveradres</label>
    <type>Address</type>
</CustomField>