force-app/main/default/objects/Werk_Order__c/fields/Afleveren_tijd__c.field-meta.xml
<CustomField>
    <fullName>Afleveren_tijd__c</fullName>
    <label>Afleveren tijd</label>
    <length>100</length>
    <type>Text</type>
</CustomField>