force-app/main/default/objects/Werk_Order__c/fields/Afleveren_tot__c.field-meta.xml
<CustomField>
    <fullName>Afleveren_tot__c</fullName>
    <label>Afleveren tot:</label>
    <type>DateTime</type>
</CustomField>