force-app/main/default/objects/Werk_Order__c/fields/Afleveren_tot_voorstel__c.field-meta.xml
<CustomField>
    <fullName>Afleveren_tot_voorstel__c</fullName>
    <label>Afleveren tot voorstel</label>
    <type>DateTime</type>
</CustomField>