force-app/main/default/objects/Werk_Order__c/fields/Afleveren_vanaf__c.field-meta.xml
<CustomField>
    <fullName>Afleveren_vanaf__c</fullName>
    <label>Afleveren vanaf:</label>
    <type>DateTime</type>
</CustomField>