force-app/main/default/objects/Werk_Order__c/fields/Afleveren_vanaf_datum1__c.field-meta.xml
<CustomField>
    <fullName>Afleveren_vanaf_datum1__c</fullName>
    <inlineHelpText>Indien het vanaf een bepaalde datum afgeleverd moet worden, voer hier de datum in.</inlineHelpText>
    <label>Afleveren vanaf datum</label>
    <type>Date</type>
</CustomField>