force-app/main/default/objects/Werk_Order__c/fields/Afleveren_Vanaf_Datum__c.field-meta.xml
<CustomField>
    <fullName>Afleveren_Vanaf_Datum__c</fullName>
    <formula>DATEVAlUE( Afleveren_vanaf__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Afleveren Vanaf Datum</label>
    <type>Date</type>
</CustomField>