force-app/main/default/objects/Werk_Order__c/fields/Afleveren_vanaf_voorstel__c.field-meta.xml
<CustomField>
    <fullName>Afleveren_vanaf_voorstel__c</fullName>
    <label>Afleveren vanaf voorstel</label>
    <type>DateTime</type>
</CustomField>