force-app/main/default/objects/Werk_Order__c/fields/Amount_Without_Minimale_Toeslag__c.field-meta.xml
<CustomField>
    <fullName>Amount_Without_Minimale_Toeslag__c</fullName>
    <label>Amount Without Minimale Toeslag</label>
    <summarizedField>Wasserij_item__c.Totale_Prijs__c</summarizedField>
    <summaryFilterItems>
        <field>Wasserij_item__c.Minimale_Toeslag__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>