force-app/main/default/objects/Werk_Order__c/fields/Ander_Afleveradres__c.field-meta.xml
<CustomField>
    <fullName>Ander_Afleveradres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ander Afleveradres</label>
    <type>Checkbox</type>
</CustomField>