force-app/main/default/objects/Werk_Order__c/fields/Ander_Ophaaladres__c.field-meta.xml
<CustomField>
    <fullName>Ander_Ophaaladres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ander Ophaaladres</label>
    <type>Checkbox</type>
</CustomField>