force-app/main/default/objects/Werk_Order__c/fields/Andere_naam_op_factuur__c.field-meta.xml
<CustomField>
    <fullName>Andere_naam_op_factuur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Andere naam op factuur</label>
    <type>Checkbox</type>
</CustomField>