force-app/main/default/objects/Werk_Order__c/fields/Associatie_Referentie_1__c.field-meta.xml
<CustomField>
    <fullName>Associatie_Referentie_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associatie Referentie 1</label>
    <referenceTo>Route_Postcode_Associatie__c</referenceTo>
    <relationshipLabel>Werk Orders</relationshipLabel>
    <relationshipName>Werk_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>