force-app/main/default/objects/Werk_Order__c/fields/Associatie_Referentie_2__c.field-meta.xml
<CustomField>
    <fullName>Associatie_Referentie_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associatie Referentie 2</label>
    <referenceTo>Route_Postcode_Associatie__c</referenceTo>
    <relationshipLabel>Werk Orders (Associatie Referentie 2)</relationshipLabel>
    <relationshipName>Werk_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>