force-app/main/default/objects/Werk_Order__c/fields/Associatie_Referentie_3__c.field-meta.xml
<CustomField>
    <fullName>Associatie_Referentie_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associatie Referentie 3</label>
    <referenceTo>Route_Postcode_Associatie__c</referenceTo>
    <relationshipLabel>Werk Orders (Associatie Referentie 3)</relationshipLabel>
    <relationshipName>Werk_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>