force-app/main/default/objects/Werk_Order__c/fields/Bedrag_incl_BTW_HOOG__c.field-meta.xml
<CustomField>
    <fullName>Bedrag_incl_BTW_HOOG__c</fullName>
    <label>Bedrag incl. BTW HOOG</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>