force-app/main/default/objects/Werk_Order__c/fields/Bedrag_incl_BTW_teruggestort__c.field-meta.xml
<CustomField>
    <fullName>Bedrag_incl_BTW_teruggestort__c</fullName>
    <label>Bedrag incl BTW teruggestort</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>