force-app/main/default/objects/Werk_Order__c/fields/Bel__c.field-meta.xml
<CustomField>
    <fullName>Bel__c</fullName>
    <formula>IF(
    ISBLANK(Account__r.Phone), 
    &quot;&quot;, 
    HYPERLINK(&quot;tel:&quot; &amp; Account__r.Phone , &quot;Telefoon&quot;,&quot;_self&quot; )
)
&amp; 
IF(
    AND(
        NOT(ISBLANK(Account__r.Phone)),
        NOT(ISBLANK(Account__r.PersonContact.MobilePhone))
    ), 
    BR() &amp; BR(), 
    &quot;&quot;
)
&amp; 
IF(
    ISBLANK(Account__r.PersonContact.MobilePhone), 
    &quot;&quot;, 
    HYPERLINK(&quot;tel:&quot; &amp; Account__r.PersonContact.MobilePhone , &quot;Mobiel&quot;,&quot;_self&quot; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bel</label>
    <type>Text</type>
</CustomField>