force-app/main/default/objects/Werk_Order__c/fields/Bestaande_klant__c.field-meta.xml
<CustomField>
    <fullName>Bestaande_klant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bestaande klant</label>
    <type>Checkbox</type>
</CustomField>