force-app/main/default/objects/Werk_Order__c/fields/Betaling_binnen__c.field-meta.xml
<CustomField>
    <fullName>Betaling_binnen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Betaling binnen?</label>
    <type>Checkbox</type>
</CustomField>