force-app/main/default/objects/Werk_Order__c/fields/Betaling_ontvangen_per__c.field-meta.xml
<CustomField>
    <fullName>Betaling_ontvangen_per__c</fullName>
    <label>Betaling ontvangen per</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Betaling_ontvangen_per</valueSetName>
    </valueSet>
</CustomField>