force-app/main/default/objects/Werk_Order__c/fields/Betalingswijze__c.field-meta.xml
<CustomField>
    <fullName>Betalingswijze__c</fullName>
    <label>Betalingswijze</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contant/Pin</fullName>
                <default>true</default>
                <label>Contant/Pin</label>
            </value>
            <value>
                <fullName>Pin</fullName>
            </value>
            <value>
                <fullName>Contant</fullName>
            </value>
            <value>
                <fullName>Ideal</fullName>
                <label>iDEAL</label>
            </value>
            <value>
                <fullName>Geen</fullName>
            </value>
            <value>
                <fullName>Factuur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>