force-app/main/default/objects/Werk_Order__c/fields/Bevestigingen_sturen__c.field-meta.xml
<CustomField>
    <fullName>Bevestigingen_sturen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bevestigingen sturen?</label>
    <type>Checkbox</type>
</CustomField>