force-app/main/default/objects/Werk_Order__c/fields/Bovenliggende_Werk_Order__c.field-meta.xml
<CustomField>
    <fullName>Bovenliggende_Werk_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bovenliggende Werk Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Werk_Order__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Werk_Order__c</referenceTo>
    <relationshipLabel>Werk Orders</relationshipLabel>
    <relationshipName>Werk_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>