force-app/main/default/objects/Werk_Order__c/fields/BTW_Toepasbaar__c.field-meta.xml
<CustomField>
    <fullName>BTW_Toepasbaar__c</fullName>
    <description>When the Answer is Yes VAT will be calculated based on the price that is set on the product</description>
    <label>BTW Toepasbaar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>