force-app/main/default/objects/Werk_Order__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Werk Orders</relationshipLabel>
    <relationshipName>Werk_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>