force-app/main/default/objects/Werk_Order__c/fields/Chauffeur_Afleveren_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Chauffeur_Afleveren_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chauffeur Afleveren</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Werk_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>