force-app/main/default/objects/Werk_Order__c/fields/Chauffeur_Ophalen_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Chauffeur_Ophalen_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chauffeur Ophalen</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Werk_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>