force-app/main/default/objects/Werk_Order__c/fields/Contactpersoon__c.field-meta.xml
<CustomField>
    <fullName>Contactpersoon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contactpersoon</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Werk Orders</relationshipLabel>
    <relationshipName>Werk_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>