force-app/main/default/objects/Werk_Order__c/fields/Contant_ontvangen__c.field-meta.xml
<CustomField>
    <fullName>Contant_ontvangen__c</fullName>
    <label>Contant ontvangen</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>