force-app/main/default/objects/Werk_Order__c/fields/Datum_betaling_ontvangen__c.field-meta.xml
<CustomField>
    <fullName>Datum_betaling_ontvangen__c</fullName>
    <label>Datum betaling ontvangen</label>
    <type>Date</type>
</CustomField>