force-app/main/default/objects/Werk_Order__c/fields/Datum_gefactureerd__c.field-meta.xml
<CustomField>
    <fullName>Datum_gefactureerd__c</fullName>
    <label>Datum gefactureerd</label>
    <type>Date</type>
</CustomField>