force-app/main/default/objects/Werk_Order__c/fields/Datum_teruggestort__c.field-meta.xml
<CustomField>
    <fullName>Datum_teruggestort__c</fullName>
    <label>Datum teruggestort</label>
    <type>Date</type>
</CustomField>