force-app/main/default/objects/Werk_Order__c/fields/Datum_Tijd_Aan_Het_Reinigen__c.field-meta.xml
<CustomField>
    <fullName>Datum_Tijd_Aan_Het_Reinigen__c</fullName>
    <description>Wordt gebruikt als een tijdstrigger in stroom: Record Trigger - Werk Order - After</description>
    <label>Datum/Tijd Aan Het Reinigen</label>
    <type>DateTime</type>
</CustomField>