force-app/main/default/objects/Werk_Order__c/fields/Datum_tijd_afgerond__c.field-meta.xml
<CustomField>
    <fullName>Datum_tijd_afgerond__c</fullName>
    <label>Datum/tijd afgerond</label>
    <type>DateTime</type>
</CustomField>