force-app/main/default/objects/Werk_Order__c/fields/Datum_Tijd_Aflevervoorstel_verstuurd__c.field-meta.xml
<CustomField>
    <fullName>Datum_Tijd_Aflevervoorstel_verstuurd__c</fullName>
    <label>Datum/Tijd Aflevervoorstel verstuurd</label>
    <type>DateTime</type>
</CustomField>