force-app/main/default/objects/Werk_Order__c/fields/Datum_Tijd_Afspraak_SofaSaver_Verstuurd__c.field-meta.xml
<CustomField>
    <fullName>Datum_Tijd_Afspraak_SofaSaver_Verstuurd__c</fullName>
    <label>Datum/Tijd Afspraak SofaSaver Verstuurd</label>
    <type>DateTime</type>
</CustomField>