force-app/main/default/objects/Werk_Order__c/fields/Datum_Tijd_Ophalen_plannen__c.field-meta.xml
<CustomField>
    <fullName>Datum_Tijd_Ophalen_plannen__c</fullName>
    <label>Datum/Tijd Ophalen plannen</label>
    <type>DateTime</type>
</CustomField>