force-app/main/default/objects/Werk_Order__c/fields/E_mail_adres_secundair__c.field-meta.xml
<CustomField>
    <fullName>E_mail_adres_secundair__c</fullName>
    <label>E-mail adres (secundair)</label>
    <type>Email</type>
</CustomField>