force-app/main/default/objects/Werk_Order__c/fields/Factuur__c.field-meta.xml
<CustomField>
    <fullName>Factuur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factuur</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Werk Orders</relationshipLabel>
    <relationshipName>Werk_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>