force-app/main/default/objects/Werk_Order__c/fields/Factuur_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Factuur_E_mail__c</fullName>
    <label>Factuur E-mail</label>
    <type>Email</type>
</CustomField>