force-app/main/default/objects/Werk_Order__c/fields/Factuurbedrag_Exact__c.field-meta.xml
<CustomField>
    <fullName>Factuurbedrag_Exact__c</fullName>
    <label>Factuurbedrag Exact</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>