force-app/main/default/objects/Werk_Order__c/fields/Factuurdatum__c.field-meta.xml
<CustomField>
    <fullName>Factuurdatum__c</fullName>
    <formula>BLANKVALUE(Afleveren_vanaf__c,  Aanvang_Datum_en_Tijd__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Factuurdatum</label>
    <type>Date</type>
</CustomField>