force-app/main/default/objects/Werk_Order__c/fields/Factuurnummer__c.field-meta.xml
<CustomField>
    <fullName>Factuurnummer__c</fullName>
    <displayFormat>F-{0000}</displayFormat>
    <label>Factuurnummer</label>
    <type>AutoNumber</type>
</CustomField>