force-app/main/default/objects/Werk_Order__c/fields/Factuurnummer_Exact_Online__c.field-meta.xml
<CustomField>
    <fullName>Factuurnummer_Exact_Online__c</fullName>
    <externalId>true</externalId>
    <label>Factuurnummer Exact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>