force-app/main/default/objects/Werk_Order__c/fields/Gaat_met_Route_mee__c.field-meta.xml
<CustomField>
    <fullName>Gaat_met_Route_mee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gaat met Route mee</label>
    <type>Checkbox</type>
</CustomField>