force-app/main/default/objects/Werk_Order__c/fields/Geen_minimum_tarief_wederverkoper__c.field-meta.xml
<CustomField>
    <fullName>Geen_minimum_tarief_wederverkoper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geen minimum tarief wederverkoper</label>
    <type>Checkbox</type>
</CustomField>