force-app/main/default/objects/Werk_Order__c/fields/Gefactureerd__c.field-meta.xml
<CustomField>
    <fullName>Gefactureerd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gefactureerd</label>
    <type>Checkbox</type>
</CustomField>