force-app/main/default/objects/Werk_Order__c/fields/Grootboek__c.field-meta.xml
<CustomField>
    <fullName>Grootboek__c</fullName>
    <label>Grootboek</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onderhoudsprogramma</fullName>
            </value>
            <value>
                <fullName>Verkoop Hotels</fullName>
            </value>
            <value>
                <fullName>Verkoop Bedrijven</fullName>
            </value>
            <value>
                <fullName>Verkoop Particulier</fullName>
            </value>
            <value>
                <fullName>Verkoop Onderaanneming</fullName>
            </value>
            <value>
                <fullName>Verkoop Handel</fullName>
            </value>
            <value>
                <fullName>Verkoop Wasserij</fullName>
            </value>
            <value>
                <fullName>Verkoop Specialistisch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>