force-app/main/default/objects/Werk_Order__c/fields/iDEAL_Payment_Link_ID__c.field-meta.xml
<CustomField>
    <fullName>iDEAL_Payment_Link_ID__c</fullName>
    <label>iDEAL Payment Link ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>