force-app/main/default/objects/Werk_Order__c/fields/Incassokosten_formule__c.field-meta.xml
<CustomField>
    <fullName>Incassokosten_formule__c</fullName>
    <formula>IF(  Totaal_Incl_BTW_Wasserij_Items__c   &gt;= 10 &amp;&amp; Totaal_Incl_BTW_Wasserij_Items__c &lt; 267,40,
IF( Totaal_Incl_BTW_Wasserij_Items__c  &gt;= 267 &amp;&amp; Totaal_Incl_BTW_Wasserij_Items__c &lt; 2500, Totaal_Incl_BTW_Wasserij_Items__c * 0.15,
0
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incassokosten formule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>