force-app/main/default/objects/Werk_Order__c/fields/Info_Diep_Vuil__c.field-meta.xml
<CustomField>
    <fullName>Info_Diep_Vuil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info - Diep Vuil</label>
    <type>Checkbox</type>
</CustomField>