force-app/main/default/objects/Werk_Order__c/fields/Info_Enkele_vlekken__c.field-meta.xml
<CustomField>
    <fullName>Info_Enkele_vlekken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info - Enkele vlekken</label>
    <type>Checkbox</type>
</CustomField>