force-app/main/default/objects/Werk_Order__c/fields/Info_Looppad__c.field-meta.xml
<CustomField>
    <fullName>Info_Looppad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Info - Looppad</label>
    <type>Checkbox</type>
</CustomField>