force-app/main/default/objects/Werk_Order__c/fields/Is_Hoofdwerkorder__c.field-meta.xml
<CustomField>
    <fullName>Is_Hoofdwerkorder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hoofdwerkorder?</label>
    <type>Checkbox</type>
</CustomField>