force-app/main/default/objects/Werk_Order__c/fields/Is_Inspectie__c.field-meta.xml
<CustomField>
    <fullName>Is_Inspectie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Inspectie?</label>
    <type>Checkbox</type>
</CustomField>