force-app/main/default/objects/Werk_Order__c/fields/Is_Klacht__c.field-meta.xml
<CustomField>
    <fullName>Is_Klacht__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aanvinken als het een klacht betreft.</description>
    <label>Is Klacht?</label>
    <type>Checkbox</type>
</CustomField>