force-app/main/default/objects/Werk_Order__c/fields/Klacht__c.field-meta.xml
<CustomField>
    <fullName>Klacht__c</fullName>
    <label>Klacht?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nee</fullName>
                <default>true</default>
                <label>Nee</label>
            </value>
            <value>
                <fullName>Ja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>