force-app/main/default/objects/Werk_Order__c/fields/Klacht_in_behandeling_door__c.field-meta.xml
<CustomField>
    <fullName>Klacht_in_behandeling_door__c</fullName>
    <label>Klacht in behandeling door:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mark Bolding</fullName>
            </value>
            <value>
                <fullName>Paul Reiding</fullName>
            </value>
            <value>
                <fullName>Willem Blok</fullName>
            </value>
            <value>
                <fullName>Albert Blok</fullName>
            </value>
            <value>
                <fullName>Henk de Vries</fullName>
                <isActive>false</isActive>
                <label>Henk de Vries</label>
            </value>
            <value>
                <fullName>Remco van Knippenberg</fullName>
                <isActive>false</isActive>
                <label>Remco van Knippenberg</label>
            </value>
            <value>
                <fullName>Sigrid Hazebroek</fullName>
                <isActive>false</isActive>
                <label>Sigrid Hazebroek</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>