force-app/main/default/objects/Werk_Order__c/fields/Klachten_Afhandeling__c.field-meta.xml
<CustomField>
    <fullName>Klachten_Afhandeling__c</fullName>
    <label>Klachten Afhandeling</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>