force-app/main/default/objects/Werk_Order__c/fields/Klant__c.field-meta.xml
<CustomField>
    <fullName>Klant__c</fullName>
    <label>Agenda Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>