force-app/main/default/objects/Werk_Order__c/fields/Klantnaam__c.field-meta.xml
<CustomField>
    <fullName>Klantnaam__c</fullName>
    <formula>IF(
Account__r.RecordType.Name = &quot;Bedrijven&quot;,
Account__r.Name &amp; 
BR() &amp; Name &amp; BR() &amp;
CASE( 
    Werk_Order_Status__c ,
    &quot;Ophalen ingepland&quot;, &quot;Ophalen&quot;,
    &quot;Opgehaald&quot;, &quot;Opgehaald&quot;,
    &quot;Terugbrengen ingepland&quot;, &quot;Afleveren&quot;,
    &quot;Teruggebracht&quot;, &quot;Afgeleverd&quot;,
    &quot;Reparatie brengen ingepland&quot;, &quot;Afleveren&quot;,
    &quot;Reparatie ophalen ingepland&quot;, &quot;Ophalen&quot;,
    &quot;Reparatie opgehaald&quot;, &quot;Opgehaald&quot;,
    &quot;Reparatie in uitvoering&quot;, &quot;Afgeleverd&quot;,
    &quot;Ingepland&quot;, &quot;Uitvoeren&quot;,
    &quot;Wordt gebracht&quot;, &quot;Wordt gebracht&quot;,
    &quot;Wordt opgehaald&quot;, &quot;Wordt opgehaald&quot;,
 &quot;Levering ingepland&quot;, &quot;SofaSaver brengen&quot;,
&quot;Ophaling ingepland&quot;, &quot;SofaSaver halen&quot;,
    &quot;&quot;
) &amp; BR() &amp;
IF(Volledige_betaling_ontvangen__c, &quot;BETAALD&quot;, &quot;&quot;),
Account__r.FirstName &amp; &quot; &quot; &amp; Account__r.LastName &amp; BR() &amp;
Name &amp; BR() &amp;
CASE( 
     Werk_Order_Status__c ,
    &quot;Ophalen ingepland&quot;, &quot;Ophalen&quot;,
    &quot;Opgehaald&quot;, &quot;Opgehaald&quot;,
    &quot;Terugbrengen ingepland&quot;, &quot;Afleveren&quot;,
    &quot;Teruggebracht&quot;, &quot;Afgeleverd&quot;,
    &quot;Reparatie brengen ingepland&quot;, &quot;Afleveren&quot;,
    &quot;Reparatie ophalen ingepland&quot;, &quot;Ophalen&quot;,
    &quot;Reparatie opgehaald&quot;, &quot;Opgehaald&quot;,
    &quot;Reparatie in uitvoering&quot;, &quot;Afgeleverd&quot;,
    &quot;Ingepland&quot;, &quot;Uitvoeren&quot;,
&quot;Wordt gebracht&quot;, &quot;Wordt gebracht&quot;,
    &quot;Wordt opgehaald&quot;, &quot;Wordt opgehaald&quot;,
 &quot;Levering ingepland&quot;, &quot;SofaSaver brengen&quot;,
&quot;Ophaling ingepland&quot;, &quot;SofaSaver halen&quot;,
    &quot;&quot;
) &amp; BR() &amp;
IF(Volledige_betaling_ontvangen__c, &quot;BETAALD&quot;, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Klantnaam</label>
    <type>Text</type>
</CustomField>