force-app/main/default/objects/Werk_Order__c/fields/Matras_Totaal_ligplekken__c.field-meta.xml
<CustomField>
    <fullName>Matras_Totaal_ligplekken__c</fullName>
    <label>Matras - Totaal ligplekken</label>
    <summarizedField>Wasserij_item__c.Aantal__c</summarizedField>
    <summaryFilterItems>
        <field>Wasserij_item__c.Item__c</field>
        <operation>equals</operation>
        <value>Matras</value>
    </summaryFilterItems>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>