force-app/main/default/objects/Werk_Order__c/fields/Meerdere_Betaalmethoden__c.field-meta.xml
<CustomField>
    <fullName>Meerdere_Betaalmethoden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meerdere Betaalmethoden</label>
    <type>Checkbox</type>
</CustomField>