force-app/main/default/objects/Werk_Order__c/fields/Meubel_Totaal_Zitplaatsen__c.field-meta.xml
<CustomField>
    <fullName>Meubel_Totaal_Zitplaatsen__c</fullName>
    <label>Meubel - Totaal zitplaatsen</label>
    <summarizedField>Wasserij_item__c.Aantal__c</summarizedField>
    <summaryFilterItems>
        <field>Wasserij_item__c.Item__c</field>
        <operation>equals</operation>
        <value>Stoffen Meubel</value>
    </summaryFilterItems>
    <summaryForeignKey>Wasserij_item__c.Werk_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>