force-app/main/default/objects/Werk_Order__c/fields/Mobiel__c.field-meta.xml
<CustomField>
    <fullName>Mobiel__c</fullName>
    <formula>IF( Account__r.IsPersonAccount = true, Account__r.PersonContact.MobilePhone, Contactpersoon__r.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobiel</label>
    <type>Text</type>
</CustomField>