force-app/main/default/objects/Werk_Order__c/fields/Mollie_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Mollie_Payment_ID__c</fullName>
    <label>Mollie Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>