force-app/main/default/objects/Werk_Order__c/fields/Mollie_Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Mollie_Payment_URL__c</fullName>
    <label>Mollie Payment URL</label>
    <type>Url</type>
</CustomField>