force-app/main/default/objects/Werk_Order__c/fields/Mollie_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Mollie_QR_Code__c</fullName>
    <formula>if(
NOT(ISBLANK(Mollie_Payment_URL__c)),
IMAGE(&quot;https://quickchart.io/qr?text=&quot;+Mollie_Payment_URL__c, &apos;Scan QR to Open Payment Link&apos;),
&apos;Please Generate Payment URL For QR Code&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mollie QR Code</label>
    <type>Text</type>
</CustomField>