force-app/main/default/objects/Werk_Order__c/fields/Mot__c.field-meta.xml
<CustomField>
    <fullName>Mot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mot?</label>
    <type>Checkbox</type>
</CustomField>