force-app/main/default/objects/Werk_Order__c/fields/Naam_op_Factuur__c.field-meta.xml
<CustomField>
    <fullName>Naam_op_Factuur__c</fullName>
    <label>Naam op Factuur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>