force-app/main/default/objects/Werk_Order__c/fields/Navigeer__c.field-meta.xml
<CustomField>
    <fullName>Navigeer__c</fullName>
    <formula>HYPERLINK(
&quot;https://www.google.com/maps/place/&quot; +
IF(
OR(TEXT(Werk_Order_Status__c) = &quot;Ophalen ingepland&quot;, TEXT(Werk_Order_Status__c) = &quot;Opgehaald&quot;, TEXT(Werk_Order_Status__c) = &quot;Ophaling ingepland&quot;),
Ophaaladres1__Street__s + &quot;,&quot; + Ophaaladres1__PostalCode__s + &quot;,&quot; + Ophaaladres1__City__s,
IF(
OR(TEXT(Werk_Order_Status__c) = &quot;Terugbrengen ingepland&quot;, TEXT(Werk_Order_Status__c) = &quot;Teruggebracht&quot;, TEXT(Werk_Order_Status__c) = &quot;Levering ingepland&quot;),
Afleveradres1__Street__s + &quot;,&quot; + Afleveradres1__PostalCode__s + &quot;,&quot; + Afleveradres1__City__s,
IF(
TEXT(Werk_Order_Status__c) = &quot;Ingepland&quot;,
Projectadres1__Street__s + &quot;,&quot; + Projectadres1__PostalCode__s + &quot;,&quot; + Projectadres1__City__s,
IF(
ISBLANK(Account__r.PersonContact.MailingStreet),
Account__r.ShippingStreet,
Account__r.PersonContact.MailingStreet
) + &quot;,&quot; +
IF(
ISBLANK(Account__r.PersonContact.MailingCity),
Account__r.ShippingCity,
Account__r.PersonContact.MailingCity
)
)
)
),
IF(
OR(TEXT(Werk_Order_Status__c) = &quot;Ophalen ingepland&quot;, TEXT(Werk_Order_Status__c) = &quot;Opgehaald&quot;, TEXT(Werk_Order_Status__c) = &quot;Ophaling ingepland&quot;),
Ophaaladres1__Street__s + BR() + Ophaaladres1__PostalCode__s + &quot; &quot;+ Ophaaladres1__City__s,
IF(
OR(TEXT(Werk_Order_Status__c) = &quot;Terugbrengen ingepland&quot;, TEXT(Werk_Order_Status__c) = &quot;Teruggebracht&quot;, TEXT(Werk_Order_Status__c) = &quot;Levering ingepland&quot;),
Afleveradres1__Street__s + BR() + Afleveradres1__PostalCode__s +&quot; &quot;+ Afleveradres1__City__s,
IF(
OR(TEXT(Werk_Order_Status__c) = &quot;Ingepland&quot;, TEXT(Werk_Order_Status__c) = &quot;Afgerond&quot;),
Projectadres1__Street__s + BR() + Projectadres1__PostalCode__s +&quot; &quot;+ Projectadres1__City__s,
&quot;Navigeer&quot;
)
)
)
, &quot;Open in Google Maps&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Navigeer</label>
    <type>Text</type>
</CustomField>