force-app/main/default/objects/Werk_Order__c/fields/Niet_automatisch_inplannen__c.field-meta.xml
<CustomField>
    <fullName>Niet_automatisch_inplannen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Niet automatisch inplannen</label>
    <type>Checkbox</type>
</CustomField>