force-app/main/default/objects/Werk_Order__c/fields/Nieuwe_datums_laden__c.field-meta.xml
<CustomField>
    <fullName>Nieuwe_datums_laden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nieuwe datums laden</label>
    <type>Checkbox</type>
</CustomField>